--- a/LuminolData.Rmd
+++ b/LuminolData.Rmd
@@ -12,7 +12,7 @@ Library packages and set the knitr
 knitr::opts_chunk$set(echo = TRUE)
 #Change working directory here
 knitr::opts_chunk$set(root.dir = "/Users/cameronmeikle/Desktop/UNR_RA_position/Projects/Konzo")
-#Can we push to the Repo
+#We can!!!
 
 library(knitr)
 library(tidyverse)
