--- a/LuminolData.Rmd
+++ b/LuminolData.Rmd
@@ -113,8 +113,9 @@ Create basic box plots of the data split by timepoint
 
 ```{r timepoint box plot, echo=FALSE, warning=FALSE}
 
-ggplot(data_by_timepoint, aes(x = Timepoint, y = RFU)) +
-  geom_boxplot() +
+ggplot(data_by_timepoint, aes(x = Timepoint, y = RFU, fill = Timepoint)) +
+  geom_violin(show.legend = FALSE) +
+  geom_boxplot(width = 0.2, show.legend = FALSE) +
   stat_compare_means(method = "anova") +
   theme_minimal()
 
@@ -130,12 +131,24 @@ for (timepoint in unique_timepoints) {
   df <- data_by_timepoint %>% filter(Timepoint == timepoint)
   
   box_plot <- ggplot(df, aes(x = Location, y = RFU)) +
-  geom_boxplot() +
+    geom_violin() +
+  geom_boxplot(width = 0.2) +
     labs(title = paste("Timepoint", timepoint, "Minutes")) +
     stat_compare_means(method = "anova") +
     theme_minimal()
   
   print(box_plot)
+  
+  df_Control_only <- df %>% filter(Sample_Type == "Control")
+  
+   box_plot_Control <- ggplot(df_Control_only, aes(x = Location, y = RFU)) +
+    geom_violin() +
+  geom_boxplot(width = 0.2) +
+    labs(title = paste("Timepoint", timepoint, "Minutes_Control Only")) +
+    stat_compare_means(method = "anova") +
+    theme_minimal()
+   
+   print(box_plot_Control)
   
   anova <- aov(RFU ~ Location, df)
   
@@ -161,8 +174,9 @@ ggplot(data_by_timepoint, aes(x = Sample_Type, y = RFU)) +
 for (timepoint in unique_timepoints) {
   df <- data_by_timepoint %>% filter(Timepoint == timepoint)
   
-  box_plot <- ggplot(df, aes(x = Sample_Type, y = RFU)) +
-  geom_boxplot() +
+  box_plot <- ggplot(df, aes(x = Sample_Type, y = RFU, fill = Sample_Type)) +
+    geom_violin() +
+  geom_boxplot(width = 0.2, show.legend = FALSE) +
   labs(title = paste("Timepoint", timepoint, "Minutes")) +
   stat_compare_means(method = "t.test") +
     theme_minimal()
@@ -273,7 +287,7 @@ Just to double check that age isn't a problem, we are going to subsample the hea
 ```{r, agebinning and bootstrap, echo=FALSE, warning=FALSE, message=FALSE}
 
 # Define parameters
-n_bootstrap <- 100  # Number of bootstrap samples
+n_bootstrap <- 500  # Number of bootstrap samples
 
 #Creates age groups
 FifteenMinutedataframe_agegrouped <- FifteenMinutedataframe %>%
@@ -413,10 +427,11 @@ ggplot(FilteredDataSex, aes(x = Sex, y = RFU)) +
 unique_sex <- unique(FilteredDataSex$Sex)
 
 for (sex in unique_sex) {
-  df <- FilteredDataSex %>% filter( Sex == sex)
+  df <- FilteredDataSex %>% filter(Sex == sex)
   
-  PlotbySex <- ggplot(df, aes(x = Sample_Type, y = RFU)) +
-    geom_boxplot() +
+  PlotbySex <- ggplot(df, aes(x = Sample_Type, y = RFU, fill = Sample_Type)) +
+    geom_violin(show.legend = FALSE) +
+    geom_boxplot(show.legend = FALSE, width = 0.2) +
     stat_compare_means(method = "t.test") +
     labs(title = paste("Boxplot by status for", sex, "subjects")) +
     theme_minimal()
@@ -432,7 +447,8 @@ for (status in Sample_Types) {
   df <- FilteredDataSex %>% filter(Sample_Type == status)
   
   PlotbyStatus <- ggplot(df, aes(x = Sex, y = RFU)) +
-    geom_boxplot() +
+    geom_violin(show.legend = FALSE) +
+    geom_boxplot(width = 0.2) +
     stat_compare_means(method = "t.test") +
     labs(title = paste("Boxplot by sex for", status, "subjects")) +
     theme_minimal()
@@ -443,7 +459,8 @@ for (status in Sample_Types) {
 #Just checking age difference between Konzo cases by Sex
 FilteredDataSex_Konzo_only <- FilteredDataSex %>% filter (Sample_Type == "Konzo")
 ggplot(FilteredDataSex_Konzo_only, aes(x = Sex, y = Age)) +
-  geom_boxplot() +
+  geom_violin(show.legend = FALSE) +
+  geom_boxplot(width = 0.2) +
   stat_compare_means(method = "t.test") +
   theme_minimal()
   
